Fix localstack image version to 0.11.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - hmpps
 
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack:0.11.5
     container_name: localstack
     networks:
       - hmpps
