P4-2185 - importing reporting files
Move test report files to new directory structure

Move ProviderConfiguration.kt to S3ProviderConfiguration.kt
Create AmazonS3ClientBuilder conditional on whether endpoint is given (localstack) or not (aws)
Make some fields in Journey and Move nullable to accommodate dodgy reporting data
Create an application-dev.yml which uses aws for resources and expects AWS env vars to be set

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -52,5 +52,5 @@ import-files:
   serco-prices: classpath:/spreadsheets/supplier_b_prices.xlsx
   geo-prices: classpath:/spreadsheets/supplier_a_prices.xlsx
 
-aws:
+resources:
   provider: test
