Always build (for testing)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,8 @@ workflows:
           name: build_docker
           filters:
             branches:
-              only:
-                - main
+#              only:
+#                - main
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
