P4-2228 adding in the template spreadsheet so we can just populate what we need intead of creating whole thing.  Also some refactorings.

--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -10,3 +10,11 @@ BASM_BUCKET_NAME:
 
 JPC_BUCKET_NAME:
   jpc
+
+import-files:
+  locations: "schedule_34_locations_sample.xlsx"
+  serco-prices: "serco_sample.xlsx"
+  geo-prices: "geoamey_sample.xlsx"
+
+export-files:
+  template: classpath:/spreadsheets/JCP_template.xlsx
