Set helm template config values 2.

--- a/helm_deploy/calculate-journey-variable-payments/templates/secrets.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/secrets.yaml
@@ -4,4 +4,6 @@ metadata:
   name: {{ template "app.name" . }}
 type: Opaque
 data:
-  APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.secrets.APPINSIGHTS_INSTRUMENTATIONKEY | b64enc | quote }}
+  BASM_BUCKET_NAME: {{ .Values.secrets.BASM_BUCKET_NAME | b64enc | quote }}
+  BASM_AWS_ACCESS_KEY_ID: {{ .Values.secrets.BASM_AWS_ACCESS_KEY_ID | b64enc | quote }}
+  BASM_AWS_SECRET_ACCESS_KEY: {{ .Values.secrets.BASM_AWS_SECRET_ACCESS_KEY | b64enc | quote }}
