--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -1,3 +1,5 @@
 ---
 secrets:
-  APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue
+  BASM_BUCKET_NAME: somesecretvalue
+  BASM_AWS_ACCESS_KEY_ID: somesecretvalue
+  BASM_AWS_SECRET_ACCESS_KEY: somesecretvalue
