--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ version: '3.1'
 
 services:
 
+  jpc:
+    image: quay.io/hmpps/calculate-journey-variable-payments:latest
+    container_name: jpc
+    restart: never
+    environment:
+
+
   db:
     image: postgres:latest
     container_name: jpc-database
