--- a/helm_deploy/calculate-journey-variable-payments/templates/deployment.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /health/liveness
+              path: /actuator/health/liveness
               port: {{ .Values.image.port }}
             periodSeconds: 30
             initialDelaySeconds: 90
@@ -54,7 +54,7 @@ spec:
             failureThreshold: 10
           readinessProbe:
             httpGet:
-              path: /health/readiness
+              path: /actuator/health/readiness
               port: {{ .Values.image.port }}
             periodSeconds: 20
             initialDelaySeconds: 60
