--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -18,3 +18,22 @@ import-files:
 
 export-files:
   template: classpath:/spreadsheets/JCP_template.xlsx
+
+spring:
+  security:
+    oauth2:
+      client:
+        provider:
+          hmpps:
+            authorization-uri: https://sign-in-dev.hmpps.service.justice.gov.uk/auth/oauth/authorize
+            token-uri: https://sign-in-dev.hmpps.service.justice.gov.uk/auth/oauth/token
+            user-info-uri: https://sign-in-dev.hmpps.service.justice.gov.uk/auth/api/user/me
+            user-name-attribute: name
+        registration:
+          hmpps:
+            client-id: dev
+            client-secret: dev
+            provider: hmpps
+            scope: read
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:3000/connect/hmpps/callback
