--- a/helm_deploy/calculate-journey-variable-payments/templates/secrets.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/secrets.yaml
@@ -7,3 +7,4 @@ data:
   BASM_BUCKET_NAME: {{ .Values.secrets.BASM_BUCKET_NAME | b64enc | quote }}
   BASM_AWS_ACCESS_KEY_ID: {{ .Values.secrets.BASM_AWS_ACCESS_KEY_ID | b64enc | quote }}
   BASM_AWS_SECRET_ACCESS_KEY: {{ .Values.secrets.BASM_AWS_SECRET_ACCESS_KEY | b64enc | quote }}
+  SPREADSHEET_PASSWORD: {{ .Values.secrets.SPREADSHEET_PASSWORD | b64enc | quote }}
