P4-2392 intial piece of work for integrating with the HMPPS auth service.

--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -3,4 +3,6 @@ secrets:
   BASM_BUCKET_NAME: somesecretvalue
   BASM_AWS_ACCESS_KEY_ID: somesecretvalue
   BASM_AWS_SECRET_ACCESS_KEY: somesecretvalue
+  HMPPS_AUTH_CLIENT_ID: somesecretvalue
+  HMPPS_AUTH_CLIENT_SECRET: somesecretvalue
   SPREADSHEET_PASSWORD: somesecretvalue
