--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -22,6 +22,9 @@ ingress:
 env:
   JAVA_OPTS: "-Xmx2048m"
 
+  HMPPS_AUTH_BASE_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
+  HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
+
 #whitelist:
 #  office: "217.33.148.210/32"
 #  health-kick: "35.177.252.195/32"
