P4-2370 persist reporting data
Remove PriceCalculator.kt and RowValue.kt
No longer needed because the price calculation and values are held in MoveModel.kt and JourneyModel.kt now

Add methods to MoveModel.kt and JourneyModel.kt for getting siteName, locationType etc.

Fix validation for ImportController.kt so that:
* you can only ask for a max of 1 month's data for the spreadsheet
* you can only import a max of 2 month's worth of files

MoveModelJdbcRepository.kt
* Add order by to ensure moves come back ordered by start / cancelled datetime
* Fix join to journeys to be an outer join so that moves without journeys are returned

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: calculate-journey-variable-payments
   jpa:
     database: POSTGRESQL
-    show-sql: true
+    show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
     platform: postgres
@@ -47,4 +47,4 @@ management:
         time-to-live: 2000ms
 logging:
   level:
-    ROOT: DEBUG
+    ROOT: INFO
