P4-2392 work to enabled session persistance via jdbc.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     username: jpc
     password: letmein
     driverClassName: org.postgresql.Driver
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
 
 server:
   port: 8080
