--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   db:
     image: postgres:latest
     container_name: jpc-database
+    depends_on:
+      - localstack
     restart: always
     ports:
       - "5432:5432"
@@ -20,6 +22,8 @@ services:
   localstack:
     image: localstack/localstack:0.11.5
     container_name: localstack
+    depends_on:
+      - hmpps-auth
     networks:
       - hmpps
     ports:
@@ -35,6 +39,19 @@ services:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - $PWD/localstack:/docker-entrypoint-initaws.d
+
+  hmpps-auth:
+    image: quay.io/hmpps/hmpps-auth:latest
+    networks:
+      - hmpps
+    container_name: hmpps-auth
+    ports:
+      - "9090:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health"]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev
 
 networks:
   hmpps:
