Fix double path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       client:
         provider:
           hmpps:
-            authorization-uri: ${HMPPS_AUTH_BASE_URI}/auth/oauth/authorize
+            authorization-uri: ${HMPPS_AUTH_BASE_URI}/oauth/authorize
             token-uri: ${HMPPS_AUTH_BASE_URI}/oauth/token
             user-info-uri: ${HMPPS_AUTH_BASE_URI}/api/user/me
             user-name-attribute: name
