Remap Database config parameters

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ IMPORT_FILES_PRICES_SERCO=serco_sample.xlsx
 IMPORT_FILES_PRICES_GEO=geoamey_sample.xlsx
 EXPORT_FILES_TEMPLATE=classpath:/spreadsheets/JPC_template.xlsx
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
-HMPPS_AUTH_REDIRECT_BASE_URI="http://localhost:8080/login/oauth2/code/hmpps
+HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080/login/oauth2/code/hmpps
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
