--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
             scope: read
             authorization-grant-type: authorization_code
             redirect-uri: ${HMPPS_AUTH_REDIRECT_BASE_URI}/login/oauth2/code/hmpps
+      resourceserver:
+        jwt:
+          issuer-uri: ${HMPPS_AUTH_BASE_URI}/issuer
 
 resources:
   provider: s3
