P4-2535 changes to support scheduling of reporting data import and refactoring of commands for location and price importing to use Spring Shell.

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-APP_DB_URL=jdbc:postgresql://127.0.0.1:5432/jpc?user=jpc&password=letmein
+APP_DB_URL="jdbc:postgresql://127.0.0.1:5432/jpc?user=jpc&password=letmein"
+DB_USERNAME=jpc
+DB_PASSWORD=letmein
+DB_NAME=jpc
 BASM_BUCKET_NAME=basm
 JPC_BUCKET_NAME=jpc
 S3_ENDPOINT=http://localhost:4572
@@ -10,3 +13,4 @@ HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
+CRON_IMPORT_REPORTS=-
