--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     store-type: jdbc
     jdbc:
       initialize-schema: always
+  shell:
+    interactive:
+      enabled: false
   security:
     oauth2:
       client:
@@ -35,6 +38,16 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${HMPPS_AUTH_BASE_URI}/issuer
+
+  flyway:
+    locations: classpath:/db/migration/postgres,classpath:/db/migration
+    url: ${APP_DB_URL}
+    user: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    placeholders:
+      database_password: ${DB_PASSWORD}
+    schemas: ${DB_NAME}
+    baseline-on-migrate: true
 
 resources:
   provider: s3
