--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
 spring.main.allow-bean-definition-overriding=true
 spring.security.oauth2.resourceserver.jwt.issuer-uri=
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
+CRON_IMPORT_REPORTS=-
