--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_DB_URL="jdbc:postgresql://127.0.0.1:5432/jpc?user=jpc&password=letmein"
+APP_DB_URL="jdbc:postgresql://127.0.0.1:5432/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
 BASM_BUCKET_NAME=basm
 JPC_BUCKET_NAME=jpc
 S3_ENDPOINT=http://localhost:4572
