--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-APP_DB_URL="jdbc:postgresql://127.0.0.1:5432/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
+APP_DB_URL="jdbc:postgresql://127.0.0.1:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
 BASM_BUCKET_NAME=basm
 JPC_BUCKET_NAME=jpc
+AWS_ACCESS_KEY_ID=foo
+AWS_SECRET_ACCESS_KEY=bar
+AWS_DEFAULT_REGION=eu-west-2
 S3_ENDPOINT=http://localhost:4572
 IMPORT_FILES_LOCATIONS=schedule_34_locations_sample.xlsx
 IMPORT_FILES_PRICES_SERCO=serco_sample.xlsx
