--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,8 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
+          context:
+            - hmpps-common-vars
           filters:
             branches:
               only:
@@ -58,7 +60,9 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_preprod
           env: "preprod"
-          context: calculate-journey-variable-payments-preprod
+          context:
+            - hmpps-common-vars
+            - calculate-journey-variable-payments-preprod
           requires:
             - request-preprod-approval
       - request-prod-approval:
@@ -69,7 +73,9 @@ workflows:
           name: deploy_prod
           env: "prod"
           slack_notification: true
-          context: calculate-journey-variable-payments-prod
+          context:
+            - hmpps-common-vars
+            - calculate-journey-variable-payments-prod
           requires:
             - request-prod-approval
 
