P4-2546 fixing paths for localstack test data migrations to avoid running unintentionally.

--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -6,4 +6,4 @@ spring:
 
   flyway:
     enabled: true
-    locations: classpath:/db/migration,classpath:/db/migration/localstack
+    locations: classpath:/db/migration,classpath:/db/migration
