P4-2518 correction after issue with log level was spotted release notes in the DPS gradle plugin.

--- a/applicationinsights.json
+++ b/applicationinsights.json
@@ -1,12 +1,16 @@
 {
   "role": {
-    "name": "application-name"
+    "name": "calculate-journey-variable-payments"
   },
   "customDimensions": {
-    "service.version": "\${BUILD_NUMBER}"
+    "service.version": "${BUILD_NUMBER}"
+  },
+  "instrumentation": {
+    "logging": {
+      "level": "DEBUG"
+    }
   },
   "selfDiagnostics": {
-    "destination": "console",
-    "level": "INFO"
+    "destination": "console"
   }
 }
