--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,4 +6,4 @@ spring:
 
   flyway:
     enabled: true
-    locations: classpath:/db/migration,classpath:/db/migration
+    locations: classpath:/db/migration
