P4-2671 initial work to set up Sentry for adding Slack alerts.

--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
 CRON_IMPORT_REPORTS=-
+SENTRY_ENVIRONMENT=local
