--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -5,3 +5,4 @@ secrets:
   BASM_AWS_SECRET_ACCESS_KEY: somesecretvalue
   HMPPS_AUTH_CLIENT_ID: somesecretvalue
   HMPPS_AUTH_CLIENT_SECRET: somesecretvalue
+  SENTRY_ENVIRONMENT: somesecretvalue
