--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -11,6 +11,9 @@ image:
 db:
   secret_name: rds-instance-calculate-journey-variable-payments-dev
 
+sentry:
+  secret_name: calculate-journey-variable-payments-sentry
+
 ingress:
   enabled: true
   enable_whitelist: false
@@ -24,3 +27,4 @@ env:
   HMPPS_AUTH_BASE_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-dev.apps.live-1.cloud-platform.service.justice.gov.uk"
   CRON_IMPORT_REPORTS: "-"
+  SENTRY_ENVIRONMENT: dev
