--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -11,6 +11,9 @@ image:
 db:
   secret_name: rds-instance-calculate-journey-variable-payments-prod
 
+sentry:
+  secret_name: calculate-journey-variable-payments-sentry
+
 ingress:
   enabled: true
   enable_whitelist: false
@@ -24,6 +27,7 @@ env:
   HMPPS_AUTH_BASE_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments.hmpps.service.justice.gov.uk"
   CRON_IMPORT_REPORTS: "0 0 4 * * ?"
+  SENTRY_ENVIRONMENT: prod
 
 #whitelist:
 #  office: "217.33.148.210/32"
