P4-2700 initial commit for setting up client to talk to BaSM backend API.

--- a/.env
+++ b/.env
@@ -1,17 +1,18 @@
 APP_DB_URL="jdbc:postgresql://127.0.0.1:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
-BASM_BUCKET_NAME=basm
-JPC_BUCKET_NAME=jpc
 AWS_ACCESS_KEY_ID=foo
 AWS_SECRET_ACCESS_KEY=bar
 AWS_DEFAULT_REGION=eu-west-2
-S3_ENDPOINT=http://localhost:4572
-IMPORT_FILES_LOCATIONS=schedule_34_locations_sample.xlsx
-IMPORT_FILES_PRICES_SERCO=serco_sample.xlsx
-IMPORT_FILES_PRICES_GEO=geoamey_sample.xlsx
+BASM_API_BASE_URL=http://localhost:9999
+BASM_BUCKET_NAME=basm
+CRON_IMPORT_REPORTS=-
 EXPORT_FILES_TEMPLATE=classpath:/spreadsheets/JPC_template.xlsx
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
-HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
-CRON_IMPORT_REPORTS=-
+HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
+IMPORT_FILES_LOCATIONS=schedule_34_locations_sample.xlsx
+IMPORT_FILES_PRICES_GEO=geoamey_sample.xlsx
+IMPORT_FILES_PRICES_SERCO=serco_sample.xlsx
+JPC_BUCKET_NAME=jpc
 SENTRY_ENVIRONMENT=local
+S3_ENDPOINT=http://localhost:4572
