--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -28,6 +28,7 @@ env:
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
   CRON_IMPORT_REPORTS: "0 0 4 * * ?"
   SENTRY_ENVIRONMENT: preprod
+  BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
 
 #whitelist:
 #  office: "217.33.148.210/32"
