--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -28,6 +28,7 @@ env:
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments.hmpps.service.justice.gov.uk"
   CRON_IMPORT_REPORTS: "0 0 4 * * ?"
   SENTRY_ENVIRONMENT: prod
+  BASM_API_BASE_URL: "https://api.bookasecuremove.service.justice.gov.uk"
 
 #whitelist:
 #  office: "217.33.148.210/32"
