P4-2823 refactoring the price auditing in preparation for upcoming UI changses.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,3 @@
-spring.main.allow-bean-definition-overriding=true
-spring.security.oauth2.resourceserver.jwt.issuer-uri=
-BASM_API_BASE_URL==http://localhost:9999
+BASM_API_BASE_URL=http://localhost:9999
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 CRON_IMPORT_REPORTS=-
