P4-2833 adding (disabled in all envs) scheduled task for automatic mapping of BaSM locations.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
 BASM_API_BASE_URL=http://localhost:9999
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 CRON_IMPORT_REPORTS=-
+CRON_AUTOMATIC_LOCATION_MAPPING=-
