--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ AWS_SECRET_ACCESS_KEY=bar
 AWS_DEFAULT_REGION=eu-west-2
 BASM_API_BASE_URL=http://localhost:9999
 BASM_BUCKET_NAME=basm
+CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_IMPORT_REPORTS=-
 EXPORT_FILES_TEMPLATE=classpath:/spreadsheets/JPC_template.xlsx
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
