--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -26,7 +26,7 @@ env:
   JAVA_OPTS: "-Xmx2048m"
   HMPPS_AUTH_BASE_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-dev.apps.live-1.cloud-platform.service.justice.gov.uk"
-  CRON_AUTOMATIC_LOCATION_MAPPING: "-"
-  CRON_IMPORT_REPORTS: "0 10 13 * * ?"
+  CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 13 * * ?"
+  CRON_IMPORT_REPORTS: "-"
   SENTRY_ENVIRONMENT: dev
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk"
