P4-2895 migration to backfill location history audit events.  The audting functionality came after some of the locations were there.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,6 +15,7 @@ spring:
       url: "spring.jpa.database: HSQL"
   flyway:
     enabled: false
+    locations: classpath:/db/migration/ddl,classpath:/db/migration/dml
   main:
     allow-bean-definition-overriding: true
   security:
