P4-2906 first attempt at integration tests in CI pipeline.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,61 @@ jobs:
       - store_artifacts:
           path: build/reports/tests
 
+  integration_tests:
+    executor:
+      name: hmpps/java
+    docker:
+      - image: quay.io/hmpps/hmpps-auth:latest
+        environment:
+          - SERVER_PORT=9090
+          - SPRING_PROFILES_ACTIVE=dev
+      - image: postgres:10.16
+        environment:
+          POSTGRES_DB: jpc
+          POSTGRES_USER: jpc
+          POSTGRES_PASSWORD: letmein
+        command: -p 5433
+    environment:
+      _JAVA_OPTIONS: -Xmx1024m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -XX:ParallelGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/app
+      - run:
+          name: Get wiremock
+          command: curl -o wiremock.jar https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-standalone/2.27.2/wiremock-standalone-2.27.2.jar
+      - run:
+          name: Run auth wiremock
+          command: java -jar wiremock.jar --port 9999
+          background: true
+      - run:
+          name: Run the java app.
+          command: env spring.profiles.active=dev java -Xmx1024m -jar build/libs/calculate-journey-variable-payments-*.jar
+          background: true
+      - run:
+          name: Wait for java app to start
+          command: sleep 20
+      - restore_cache:
+          key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+      - restore_cache:
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}
+      - run:
+          name: Run Fluent Integration Tests
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testIntegration
+      - save_cache:
+          key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+          paths:
+            - /home/circleci/.gradle/wrapper
+      - save_cache:
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}
+          paths:
+            - /home/circleci/.gradle/caches
+      - store_artifacts:
+          path: build/reports/tests/testIntegration
+          destination: integration/fluent
+      - store_test_results:
+          path: build/test-results
+
 workflows:
   version: 2
   build-test-and-deploy:
@@ -33,6 +88,9 @@ workflows:
               ignore: /.*/
       - hmpps/helm_lint:
           name: helm_lint
+      - integration_tests:
+          requires:
+            - validate
       - hmpps/build_docker:
           name: build_docker
           filters:
