--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,22 @@ spring:
   flyway:
     enabled: true
     locations: classpath:/db/migration
+
+APP_DB_URL: "jdbc:postgresql://127.0.0.1:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
+AWS_ACCESS_KEY_ID: foo
+AWS_SECRET_ACCESS_KEY: bar
+AWS_DEFAULT_REGION: eu-west-2
+BASM_API_BASE_URL: http://localhost:9999
+BASM_BUCKET_NAME: basm
+CRON_AUTOMATIC_LOCATION_MAPPING: "-"
+CRON_IMPORT_REPORTS: "-"
+HMPPS_AUTH_BASE_URI: http://localhost:9090/auth
+HMPPS_AUTH_CLIENT_ID: pecs-jpc-client
+HMPPS_AUTH_CLIENT_SECRET: clientsecret
+HMPPS_AUTH_REDIRECT_BASE_URI: http://localhost:8080
+IMPORT_FILES_LOCATIONS: schedule_34_locations_sample.xlsx
+IMPORT_FILES_PRICES_GEO: geoamey_sample.xlsx
+IMPORT_FILES_PRICES_SERCO: serco_sample.xlsx
+JPC_BUCKET_NAME: jpc
+SENTRY_ENVIRONMENT: local
+S3_ENDPOINT: http://localhost:4572
