--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   hmpps: ministryofjustice/hmpps@3.2
+  browser-tools: circleci/browser-tools@1.1.3
 
 jobs:
   validate:
@@ -32,7 +33,7 @@ jobs:
 
   integration_tests:
     docker:
-      - image: cimg/openjdk:11.0
+      - image: cimg/openjdk:11.0-browsers
         environment:
           _JAVA_OPTIONS: -Xmx1024m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -XX:ParallelGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
       - image: quay.io/hmpps/hmpps-auth:latest
@@ -49,6 +50,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/app
+      - browser-tools/install-browser-tools
       - run:
           name: Wait for auth
           command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
