P4-3008 trialing xlarge executor for CI pipeline to see if it resolves integtaion test step hanging.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           POSTGRES_USER: jpc
           POSTGRES_PASSWORD: letmein
         command: -p 5433
+    resource_class: "xlarge"
     steps:
       - checkout
       - attach_workspace:
